--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,11 @@
   "version": "0.1",
   "description": "Play youtube music in chrome",
   "permissions": [
-    "storage"
+    "storage","background"
   ],
   "background": {
     "page": "background.html",
-    "persistent": true
+    "persistent": false
   },
   "content_scripts": [
     {
